<resources>
    <string name="app_name">CentroVista</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Centro Vista</string>
    <string name="menu_gallery">Dottori e Orari di visita</string>
    <string name="menu_slideshow">Dove siamo?</string>
    <string name="benvenuto">...To see the beauty of life</string>
    <string name="backgroundimageAltText">backgroundImage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="centro_vista">Centro Vista</string>
    <string name="assistenza_clienti_centrovista_it">assistenza.clienti@centrovista.it</string>
    <string name="background_branch">background_branch</string>
    <string name="citt">Città:</string>
    <string name="segreteria">Segreteria:</string>
    <string name="indirizzo">Indirizzo:</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="codice_fiscale_id_dottore">Codice fiscale / ID Dottore</string>
    <string name="enter">Enter</string>
    <string name="dottore">Dottore</string>
    <string name="cliente">Cliente</string>
    <string name="nessuna_prenotazione_trovata">Nessuna prenotazione trovata</string>
    <string-array name="genders">
        <item>M</item>
        <item>F</item>
    </string-array>
</resources>